crates/oxc_react_compiler/tests/snapshots/ssa-shadowing.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-shadowing.js
---
function log() {}
function Foo(cond) {
	let str = "";
	if (cond) {
		log("other test");
	} else {
		str = "fallthrough test";
	}
	log(str);
}
