crates/oxc_react_compiler/tests/snapshots/ssa-sibling-phis.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-sibling-phis.js
---
function foo(a, b, c, d) {}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
