crates/oxc_react_compiler/tests/snapshots/ssa-throw.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-throw.js
---
function foo() {
	throw 2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
