crates/oxc_react_compiler/tests/snapshots/ssa-while-no-reassign.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-while-no-reassign.js
---
function foo() {
	while (true) {}
	return 1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
