crates/oxc_react_compiler/tests/snapshots/ssa-while.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-while.js
---
function foo() {
	let x = 1;
	while (x < 10) {
		x = x + 1;
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
