crates/oxc_react_compiler/tests/snapshots/store-via-call.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/store-via-call.js
---
import { c as _c } from "react/compiler-runtime";
function foo() {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		x = {};
		const y = foo(x);
		y.mutate();
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
