crates/oxc_react_compiler/tests/snapshots/store-via-new.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/store-via-new.js
---
import { c as _c } from "react/compiler-runtime";
function Foo() {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		x = {};
		const y = new Foo(x);
		y.mutate();
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
